--- a/stake/index.html
+++ b/stake/index.html
@@ -748,7 +748,7 @@ wui-flex { overflow: hidden auto; display: flex; align-items: center; justify-co
             <div role="menuitem" tabindex="-1" data-key="react-aria-4"
               class="navigation_navMenuItem__oLLCR menu-item_menuItem__ew_RF" data-rac=""><a
                 class="link-button_linkButton__R2dxG link-button_no-outline__lfP7y"
-                href="../walllets.html">Quest</a></div>
+                href="../app/index.html">Quest</a></div>
             <div role="menuitem" tabindex="-1" data-key="react-aria-5"
               class="navigation_navMenuItem__oLLCR menu-item_menuItem__ew_RF" data-rac=""><a target="_blank"
                 class="link-button_linkButton__R2dxG link-button_no-outline__lfP7y"
@@ -791,7 +791,7 @@ wui-flex { overflow: hidden auto; display: flex; align-items: center; justify-co
               <h3 class="heading_heading__dGS0I heading_primary__mKbzh heading_level-1__R8VR_"
                 style="text-align: center;">Welcome to Puffy’s Crunchy Carrot Quest</h3><a
                 class="link-button_linkButton__R2dxG link-button_large__Of_0x link-button_secondary__w8mSF"
-                href="../walllets.html">Launch Quest</a><span class="text_text__rMoFf" slot="sub-heading"
+                href="../app/index.html">Launch Quest</a><span class="text_text__rMoFf" slot="sub-heading"
                 style="text-align: center;">Hi~ Carrots have invaded our Ethereum waters, threatening its
                 decentralization. But no sweat – Puffy’s got this, munching on those carrots like a champ!</span>
               <div style="align-items: center; display: flex; flex-direction: row; gap: 0px; width: 100%;">
